# annotated_map_dataset

./: .gitignore  .gitmodules  README.md  clean.sh  launch_dlux.py  package.xml  requirements.txt
dataset_generation/: CMakeLists.txt  README.md  clean.sh  copydata.sh  package.xml
dataset_generation/data/annotations/: map_1.txt  map_10.txt  map_11.txt  map_12.txt  map_13.txt  map_14.txt  map_15.txt  map_16.txt  map_17.txt  map_18.txt  map_19.txt  map_2.txt  map_20.txt  map_21.txt  map_22.txt  map_23.txt  map_24.txt  map_25.txt  map_26.txt  map_27.txt  map_28.txt  map_29.txt  map_3.txt  map_30.txt  map_31.txt  map_32.txt  map_33.txt  map_34.txt  map_35.txt  map_36.txt  map_37.txt  map_38.txt  map_39.txt  map_4.txt  map_40.txt  map_41.txt  map_42.txt  map_43.txt  map_44.txt  map_45.txt  (+10 more)
dataset_generation/data/example_data/: README.md  map_1_2.txt
dataset_generation/data/map_contours_info/: map_1.npy  map_10.npy  map_11.npy  map_12.npy  map_13.npy  map_14.npy  map_15.npy  map_16.npy  map_17.npy  map_18.npy  map_19.npy  map_2.npy  map_20.npy  map_21.npy  map_22.npy  map_23.npy  map_24.npy  map_25.npy  map_26.npy  map_27.npy  map_28.npy  map_29.npy  map_3.npy  map_30.npy  map_31.npy  map_32.npy  map_33.npy  map_34.npy  map_35.npy  map_36.npy  map_37.npy  map_38.npy  map_39.npy  map_4.npy  map_40.npy  map_41.npy  map_42.npy  map_43.npy  map_44.npy  map_45.npy  (+10 more)
dataset_generation/data/textures/: dark_colors.txt  light_colors.txt
dataset_generation/scripts/: calc_mean_stddev.py  high_res_obstacle_generator.py  main.py  seg_mask.py  sentence_generator.py  splitter.py
(+651 files in other folders)
